--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,12 @@ package_job:
     image: maven:latest
     script: 
         - mvn -f user-service/pom.xml clean package
+        - ls -R user-service/target/
     tags:
-        - Docker
+        - Docker_Runner
     artifacts:
         paths:
-            - target/    
+            - user-sevice/target/    
     rules:
         - when: manual    
 
@@ -19,8 +20,8 @@ test_job:
     stage: test
     script:
         - echo "Testing...."
-        - ls target/*
+        - ls -R user-service/target/
     tags:
-        - Docker    
+        - Docker_Runner    
     rules:
         - when: manual    
