--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,10 @@ package_job:
     rules:
         - when: manual    
 
-docekr_build:
+docker_build:
     stage: build
-    imgae: docker:latest
-    service:
+    image: docker:latest
+    services:
         - name: docker:dind
     variables:
         DOCKER_DRIVER: "overlay2"
