--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,8 @@ docker_build:
         
     script:
         - docker run java_app:latest
+    tags:
+        - Docker_Runner    
 
 test_job:
     image: 
