--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ docker_build:
         - docker build -t java_app:latest .
         
     script:
-        - docker run --rm java_app:latest
+        - docker run java_app:latest
     tags:
         - Docker_Runner    
 
