--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ docker_build_user:
     script:
         - docker run -d user_app:latest 
     tags:
-        - Kubernetes  
+        - Docker_Runner
     
 
 docker_build_product:
@@ -55,7 +55,7 @@ docker_build_product:
     script:
         - docker run -d product_app:latest 
     tags:
-        - Kubernetes    
+        - Docker_Runner 
         
 
 
