--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ stages:
     rules:
         - when: manual    
 
-docker_build_user:
+.docker_build_user:
     stage: build
     image: docker:latest
     services:
@@ -53,7 +53,9 @@ docker_build_product:
         - docker build -t product_app:latest -f Dockerfile.user .
         
     script:
-        - docker run -d product_app:latest 
+        - echo $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin registry.gitlab.com
+        - docker tag product_app:latest registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/product_app:latest 
+        - docker push registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/product_app:latest
     tags:
         - Kubernetes 
         
