--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: user-app
-          image: "registry.gitlab.com/Hamras Hilar A/spring/"  # This will be replaced by the CI/CD pipeline
+          image: registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/user_app:latest  
           ports:
             - containerPort: 8080
