--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,8 +73,8 @@ docker_build_product:
         - docker push registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/product_app:latest
     tags:
         - Kubernetes 
-    rules:
-        - when: manual    
+    #rules:
+    #    - when: manual    
         
 ################################################################################################################
 
