--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,23 @@ docker_build_product:
         
 ################################################################################################################
 
+docker_build_front_end:
+    stage: build
+    image: docker:latest
+    before_script:
+        - docker build -t user_app:latest -f Dockerfile.frontend .
+        
+    script:
+        - echo $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin registry.gitlab.com
+        - docker tag front_end:latest registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/front_end:latest 
+        - docker push registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/front_end:latest
+    tags:
+        - Kubernetes 
+    rules:
+        - when: manual
+
+################################################################################################################        
+
 kubernetes_deploy:
   stage: deploy
   image: alpine:latest  
@@ -89,6 +106,8 @@ kubernetes_deploy:
   script:
       - kubectl apply -f k8s/product_app_deployment.yaml
       - kubectl apply -f k8s/user_app_deployment.yaml    
+      - kubectl apply -f k8s/front_end_deployment.yaml
+
   tags:
     - Kubernetes
   #rules:
