--- a/k8s/front_end_deployment.yaml
+++ b/k8s/front_end_deployment.yaml
@@ -1,1 +1,20 @@
-sdfsdsd
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: front-end
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: front-end
+  template:
+    metadata:
+      labels:
+        app: front-end
+    spec:
+      containers:
+        - name: front-end
+          image: registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/front_end:latest  
+          ports:
+            - containerPort: 8081
+
