--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,6 +107,9 @@ kubernetes_deploy:
       - kubectl apply -f k8s/product_app_deployment.yaml
       - kubectl apply -f k8s/user_app_deployment.yaml    
       - kubectl apply -f k8s/front_end_deployment.yaml
+      - kubectl apply -f k8s/product_service.yaml
+      - kubectl apply -f k8s/user_service.yaml
+      - kubectl apply -f k8s/front_end_service.yaml
 
   tags:
     - Kubernetes
