--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ docker_build_front_end:
     stage: build
     image: docker:latest
     before_script:
-        - docker build -t user_app:latest -f Dockerfile.frontend .
+        - docker build -t front_end:latest -f Dockerfile.frontend .
         
     script:
         - echo $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin registry.gitlab.com
