--- a/k8s/product_app_deployment.yaml
+++ b/k8s/product_app_deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: user-app
-          image: registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/product_app:latest  
+          image: registry.gitlab.com/hamrashilar/spring/product_app:latest  
           ports:
             - containerPort: 8082
