--- a/k8s/user_app_deployment.yaml
+++ b/k8s/user_app_deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: user-app
-          image: registry.gitlab.com/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/user_app:latest  
+          image: registry.gitlab.com/hamrashilar/spring/user_app:latest  
           ports:
             - containerPort: 8081
 
