--- a/k8s/front_end_service.yaml
+++ b/k8s/front_end_service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frontend-service
 spec:
   selector:
-    app: frontend-service
+    app: front-end
   ports:
     - protocol: TCP
       port: 80
