--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,4 +1,4 @@
 FROM nginx:alpine
-COPY frontend/index.html /var/www/html/
+COPY frontend/index.html /usr/share/nginx/
 EXPOSE 83
 CMD ["nginx", "-g", "daemon off;"]
