--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -5,7 +5,7 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy your frontend files (e.g., HTML, CSS, JS) into the container
-COPY . /app
+COPY frontend/index.html /app
 
 # Expose the port that the Python HTTP server will use
 EXPOSE 8000
