--- a/k8s/front_end_service.yaml
+++ b/k8s/front_end_service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
 spec:
   selector:
     app: front-end
@@ -9,5 +11,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8000
-      nodePort: 30003
-  type: NodePort
+      
+  type: LoadBalancer
