--- a/k8s/product_service.yaml
+++ b/k8s/product_service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: product-app-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
 spec:
   selector:
     app: product-app
@@ -9,5 +11,4 @@ spec:
     - protocol: TCP
       port: 81
       targetPort: 8082
-      nodePort: 30001
-  type: NodePort
+  type: LoadBalancer
