--- a/k8s/user_service.yaml
+++ b/k8s/user_service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user-app-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
 spec:
   selector:
     app: user-app
@@ -9,5 +11,4 @@ spec:
     - protocol: TCP
       port: 82
       targetPort: 8081
-      nodePort: 30002
-  type: NodePort
+  type: LoadBalancer
