--- a/k8s/user_service.yaml
+++ b/k8s/user_service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: user-app-service
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "alb"
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTP"
 spec:
   selector:
     app: user-app
