--- a/k8s/front_end_service.yaml
+++ b/k8s/front_end_service.yaml
@@ -2,9 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTP"
 spec:
   selector:
     app: front-end
@@ -12,4 +9,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8000
-  type: LoadBalancer
+      nodePort: 30003
+  type: NodePort
