--- a/k8s/user_service.yaml
+++ b/k8s/user_service.yaml
@@ -2,9 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: user-app-service
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTP"
 spec:
   selector:
     app: user-app
@@ -12,4 +9,5 @@ spec:
     - protocol: TCP
       port: 82
       targetPort: 8081
-  type: LoadBalancer
+      nodePort: 30002
+  type: nodePort
